# hw_project-group-4-1

./: .gitignore  README.md
Code/: ReadMe
Code/glogger/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  t.py
Code/glogger/.cicd/: .pylintrc  noxfile.py
Code/glogger/glogger/: __init__.py  logger.py
Code/glogger/tests/: test_glogger.py
Code/hardware/: hardware.ino
Code/nodemcu/main/: main.ino
Code/pg/: pg.ino
Code/server/: cert.key  cert.pem  pyproject.toml  req.cnf
Code/server/server/: client.py  main.py  quic.py  runner.md  runner.sh  tcp.py  udp.py
Code/server/server/quic/: demo.py  doq_client.py  doq_server.py  http3_client.py  http3_server.py  httpx_client.py  interop.py  siduck_client.py
Datasheet/: ReadMe
Document/: ReadMe
Document/Final Documentation/: video.md
Document/Week 2/: project report 2.docx
Miscellaneous/: ReadMe
