[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["SmsS4 <smss.lite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
glogger = {path = "../glogger"}
uploadserver = "^4.0.0"
aioquic = "^0.9.20"
wsproto = "^1.2.0"
httpbin = "^0.7.0"
Werkzeug = "2.0.3"
asgiref = "^3.5.2"
starlette = "^0.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
